Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11472

ViewQueryTests.test_employee_dataset_stale_queries fails due to multiple reasons

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 3.0
    • 3.0
    • view-engine
    • Security Level: Public
    • None
    • Untriaged
    • Unknown

    Description

      Bug 1:
      ./testrunner -i /tmp/k_centos64.ini -t view.viewquerytests.ViewQueryTests.test_employee_dataset_stale_queries,GROUP=P0

      couch_view_index_updater crashes continously on view- stale=false tests

      Bug 2:
      Errors on view-queries like attached txt

      • seeminly newer timeout errror messages (ref #1 view-query-error)
      • newer errors on queries "{u'reason': u'{badarg,\n [ {erlang,port_command,[#Port<0.11044>,[nil,10]],[]}

        " (ref #2 view-query-error)

      • indexing hanging with server timeouts "Obtaining mutation from server timed out after 60.0 seconds "

      Attachments

        1. bug_01.tar
          9.90 MB
        2. stack_view_updater.rtf
          4 kB
        3. view-query-error.rtf
          4 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ketaki Ketaki Gangal (Inactive)
            ketaki Ketaki Gangal (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty