MB-11472 Fix uninitialized error_info variables

Change-Id: Ib6e0bd4eadf370cf4b230bee263f9723156d1993
Reviewed-on: http://review.couchbase.org/38422
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Nimish Gupta <nimish@couchbase.com>
Reviewed-by: Volker Mische <volker.mische@gmail.com>