src/views/bin/couch_view_index_builder.c
@@ -40,7 +40,7 @@ int main(int argc, char *argv[])
     int i;
     int ret = 2;
     uint64_t header_pos;
-    view_error_t error_info;
+    view_error_t error_info = {NULL, NULL};
     cb_thread_t exit_thread;
 
     (void) argc;
